--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,11 @@ dependencies {
     implementation 'com.facebook.stetho:stetho:1.5.1'
     implementation 'com.facebook.stetho:stetho-okhttp:1.5.1'
     implementation 'com.facebook.stetho:stetho-js-rhino:1.5.1'
+    implementation "android.arch.paging:runtime:1.0.1"
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    kapt "android.arch.lifecycle:compiler:1.0.0"
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'com.shreyaspatil:FirebaseRecyclerPagination:1.0.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
