--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
     implementation 'com.jakewharton:butterknife:10.2.3'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation project(path: ':advancedsupport-ads')
     kapt 'com.jakewharton:butterknife-compiler:10.2.3'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.firebaseui:firebase-ui-database:7.1.1'
@@ -58,6 +59,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt "android.arch.lifecycle:compiler:1.0.0"
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
+    def GLIDE_VERSION = "4.11.0"
+    implementation "com.zlc.glide:webpdecoder:2.0.${GLIDE_VERSION}"
     implementation 'com.shreyaspatil:FirebaseRecyclerPagination:1.0.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
