--- a/native-ads/build.gradle
+++ b/native-ads/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     testImplementation 'junit:junit:4.13.1'
+    implementation 'com.google.ads.mediation:mopub:5.15.0.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.android.gms:play-services-ads:19.7.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
